--- a/my_page.html
+++ b/my_page.html
@@ -5,7 +5,7 @@ CTYPE html>
 <h1>My First Heading:Git project</h1>
 
 
-<h2>My second heading</h2>
+<h2><marquee>My second heading</marquee></h2>
 
 <p>My first paragraph.</p>
 
